<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TA Queue</string>
    <string name="action_settings">Settings</string>

    <string name="opening_dialog_box_title">Welcome!</string>
    <string name="opening_dialog_box">
    Welcome to the TA Queue on Android!\n\n

    As this app is in early development, I want to make you
    aware of a known bug.  First, this app has trouble if you have a poor connection.  If the
    schools don\'t load on the first page, make sure your connection is good and restart the app.
    If you find any other bugs or have any feature requests, post them to the GitHub repository for
    this project at https://github.com/greganderson/TAQueue in the issues section.
    </string>
    <string name="checkbox_message">Do not show this message again</string>
    <string name="okay_button">Ok</string>

    <!-- Lists -->
    <string name="school_list_label">Schools</string>
    <string name="instructor_list_label">Instructors</string>
    <string name="queue_list_label">Classes</string>

    <!-- Both student and TA -->
    <string name="name_hint">Name</string>

    <!-- Student -->
    <string name="student">Student</string>
    <string name="location_hint">Location</string>

    <!-- TA -->
    <string name="ta">TA</string>
    <string name="password_hint">Password</string>

    <!-- Login screen -->
    <string name="login_button">Login</string>

    <!-- Queue -->
    <string name="ta_list_label">TA\'s</string>
    <string name="queue_label">Queue</string>
    <string name="queue_frozen_label">Queue (Frozen)</string>
    <string name="queue_deactivated_label">Queue (Deactivated)</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="no_tas_on_duty">No TA\'s on duty.</string>
    <string name="no_students_in_the_queue">No students in the queue.</string>

    <!-- Student specific -->
    <string name="enter_queue_button_text">Enter Queue</string>
    <string name="exit_queue_button_text">Exit Queue</string>
    <string name="chat_label">Chat</string>

    <!-- TA specific -->
    <string name="deactivate_tab_label">Deactivate</string>
    <string name="freeze_tab_label">Freeze</string>
    <string name="activate_tab_label">Activate</string>
    <string name="unfreeze_tab_label">Unfreeze</string>
    <string name="ta_selecting_student_popup_label">Action</string>
    <string name="accept_student_action">Accept</string>
    <string name="remove_student_action">Remove</string>
    <string name="put_student_back_action">Put Back</string>
    <string name="queue_status_options_menu_label">Status</string>
    <string name="change_queue_status_edittext_hint">Queue status…</string>
    <string name="change_queue_status_title">Status</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="ta_options_menu_is_question_based_label">Question Based</string>
    <string name="is_queue_question_based_yes_label">Yes</string>
    <string name="is_queue_question_based_no_label">No</string>
    <string name="queue_is_question_based_dialog_title">Is queue question based</string>


    <!-- More information activity -->
    <string name="title_activity_more_information">MoreInformationActivity</string>
    <string name="more_information_text">This app was built by Greg Anderson at the University
    of Utah.  The TA Queue web service was built by Parker Wightman.  Both this app and the backend
    web service it uses are open source.  Feel free to contribute or contact Greg or Parker for more
    information.</string>
    <string name="more_information_options_menu_label">More info</string>
    <string name="ta_queue_android_github_button">Go to TA Queue Android App on GitHub</string>
    <string name="ta_queue_web_service_github_button">Go to TA Queue Web Service on GitHub</string>
    <string name="email_greg_button">Email Greg</string>
    <string name="email_parker_button">Email Parker</string>
    <string name="start_web_client_button">Go to Web Client</string>

    <!-- Network connection error -->
    <string name="network_timeout_toast">Could not connect to server.</string>
    <string name="reconnected_toast">Reconnected</string>
    <string name="retry_connection_button">Retry Connection</string>
    <string name="settings_label">Settings</string>
    <string name="base_url_settings_label">Change base URL</string>
    <string name="base_url_popup_title">Base URL</string>
    <string name="refresh_label">Refresh</string>
    <string name="android_github_url">https://github.com/greganderson/TAQueue</string>
    <string name="web_service_github_url">https://github.com/urails/ta_queue</string>
    <string name="web_client_url">http://nine.eng.utah.edu/</string>
    <string name="error_from_server_with_no_message">Error occurred, no message received from server.</string>

</resources>
