<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.familybiz.greg.taqueue.MoreInformationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_information_text"
        android:textSize="@dimen/general_font_size"
        android:paddingBottom="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ta_queue_android_github_button"
        android:textSize="@dimen/general_font_size"
        android:paddingTop="5dp"
        style="@style/custom_button_style"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ta_queue_web_service_github_button"
        android:textSize="@dimen/general_font_size"
        android:paddingTop="5dp"
        style="@style/custom_button_style"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_greg_button"
        android:textSize="@dimen/general_font_size"
        android:paddingTop="5dp"
        style="@style/custom_button_style"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_parker_button"
        android:textSize="@dimen/general_font_size"
        android:paddingTop="5dp"
        style="@style/custom_button_style"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_web_client_button"
        android:textSize="@dimen/general_font_size"
        android:paddingTop="5dp"
        style="@style/custom_button_style"/>

</LinearLayout>